# NIfTILazyDataLoader

./: CMakeLists.txt  NIfTILazyDataLoader.py
NIfTILazyDataLoader/: NIfTILazyDataLoader.py
